[package]
name = "veml6030"
version = "0.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/veml6030-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the VEML6030 high-accuracy ambient light sensor."
readme = "README.md"
keywords = ["als", "ambient", "light", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/veml6030-rs"
documentation = "https://docs.rs/veml6030"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[badges]
travis-ci = { repository = "eldruin/veml6030-rs", branch = "master" }
coveralls = { repository = "eldruin/veml6030-rs", branch = "master", service = "github" }

[dependencies]
embedded-hal = "0.2"
libm = "0.1"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.4"

[profile.release]
lto = true
