[package]
name = "veml6030"
version = "0.1.2"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/veml6030-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the VEML6030 and VEML7700 high-accuracy ambient light sensors."
readme = "README.md"
keywords = ["als", "ambient", "light", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/veml6030-rs"
documentation = "https://docs.rs/veml6030"
edition = "2018"

[badges]
coveralls = { repository = "eldruin/veml6030-rs", branch = "master", service = "github" }

[features]
default = []
async = ["dep:embedded-hal-async"]

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0.0", optional = true }
libm = "0.2"
maybe-async-cfg = "0.2.3"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.11.1"

[profile.release]
lto = true
